tests/snapshots/examples_fixtures/type_system__failing__167_tuple_destructure_ordered_concrete_conflict_e300.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/167_tuple_destructure_ordered_concrete_conflict_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/167_tuple_destructure_ordered_concrete_conflict_e300.flx:29:21
   |
29 |     let (a, b, c) = (1, 2)
   |                     ^^^^^^
   |                     ------ this expression has type `(Int, Int)`

   |                     ------ destructure source type is known at compile time

Note:
  expected type: (_, _, _)
  found type: (Int, Int)

Help:
  These two types are not compatible.
  destructure source does not match pattern shape
== stdout ==
<not executed>
